# gstreamer-tutorial

./: README.md
basic/: CMakeLists.txt  basic-tutorial-1.c  basic-tutorial-12.c  basic-tutorial-13.c  basic-tutorial-2.c  basic-tutorial-3.c  basic-tutorial-3_plus.c  basic-tutorial-4.c  basic-tutorial-5.c  basic-tutorial-6.c  basic-tutorial-6_plus.c  basic-tutorial-7.c  basic-tutorial-8.c  basic-tutorial-9.c
playback/: CMakeLists.txt  playback-tutorial-1.c  playback-tutorial-2.c  playback-tutorial-3.c  playback-tutorial-4.c  playback-tutorial-5.c  playback-tutorial-6.c  playback-tutorial-7.c
user/: CMakeLists.txt  app_test.c  appsrc_ex.c  command.txt  rtppipeline.c  rtppipeline.h  rtptest.c  v4l2_rtp_record.c
